[package]
name = "prototest"
version = "0.1.0"
edition = "2021"
authors = ["The NLnet Labs RPKI team <rpki-team@nlnetlabs.nl>"]
categories = ["network-programming"]
description = "A library for testing network protocol implementations."
documentation = "https://docs.rs/testnetproto/"
homepage = "https://github.com/NLnetLabs/testnetproto/"
keywords = ["test", "network", "protocol", "async"]
license = "BSD-3-Clause"

[dependencies]
base64 = "0.13.0"
rand = "0.8.5"
ron = "0.7.0"
serde = { version = "1.0.131", features = [ "derive" ] }

# Optional dependencies
chrono = { version = "0.4", optional = true }
tokio = { version = "1.14", optional = true }

# Optional dependencies that are here to allow trying stuff out.
rsa = { version = "0.5", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = [ "chrono", "temporary" ]
temporary = [ "rsa", "sha1", "sha2" ]

